[gd_scene load_steps=2 format=3 uid="uid://d2ii853og8xd5"]

[ext_resource type="Script" path="res://addons/plugin_refresher/refresh_button.gd" id="1_ykbr2"]

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "The Plugin to refresh."
script = ExtResource("1_ykbr2")

[node name="options" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "The dropdown selects which plugin will be refreshed."
item_count = 1
fit_to_longest_item = false
popup/item_0/text = "Unknown"
popup/item_0/id = 0

[node name="btn_toggle" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2

[connection signal="button_down" from="options" to="." method="_on_options_button_down"]
[connection signal="item_selected" from="options" to="." method="_on_options_item_selected"]
[connection signal="toggled" from="btn_toggle" to="." method="_on_btn_toggle_toggled"]
